--- a/apps/logistics-backend/docs/swagger.yaml
+++ b/apps/logistics-backend/docs/swagger.yaml
@@ -973,37 +973,6 @@ paths:
       summary: Create a new notification
       tags:
       - notifications
-  /orders/{customer_id}:
-    get:
-      description: Fetch order(s) using Customer ID
-      parameters:
-      - description: Customer ID
-        in: path
-        name: customer_id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/order.Order'
-            type: array
-        "400":
-          description: Invalid Customer ID
-          schema:
-            type: string
-        "404":
-          description: Not found
-          schema:
-            type: string
-      security:
-      - JWT: []
-      summary: Get order by Customer ID
-      tags:
-      - orders
   /orders/{id}:
     get:
       description: Fetch a single order using UUID
@@ -1033,7 +1002,7 @@ paths:
       summary: Get order by ID
       tags:
       - orders
-  /orders/{order_id}/:
+  /orders/{order_id}:
     put:
       consumes:
       - application/json
@@ -1097,6 +1066,37 @@ paths:
       security:
       - JWT: []
       summary: List all orders
+      tags:
+      - orders
+  /orders/by-customer/{customer_id}:
+    get:
+      description: Fetch order(s) using Customer ID
+      parameters:
+      - description: Customer ID
+        in: path
+        name: customer_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/order.Order'
+            type: array
+        "400":
+          description: Invalid Customer ID
+          schema:
+            type: string
+        "404":
+          description: Not found
+          schema:
+            type: string
+      security:
+      - JWT: []
+      summary: Get order by Customer ID
       tags:
       - orders
   /orders/create:
