--- a/apps/logistics-backend/docs/swagger.yaml
+++ b/apps/logistics-backend/docs/swagger.yaml
@@ -38,10 +38,17 @@ definitions:
     - DeliveryPickedUp
     - DeliveryDelivered
     - DeliveryFailed
+  delivery.UpdateDeliveryRequest:
+    properties:
+      column:
+        type: string
+      value: {}
+    required:
+    - column
+    - value
+    type: object
   driver.CreateDriverRequest:
     properties:
-      available:
-        type: string
       current_location:
         type: string
       email:
@@ -51,7 +58,6 @@ definitions:
       vehicle_info:
         type: string
     required:
-    - available
     - current_location
     - email
     - full_name
@@ -73,6 +79,15 @@ definitions:
         type: string
       vehicle_info:
         type: string
+    type: object
+  driver.UpdateDriverRequest:
+    properties:
+      column:
+        type: string
+      value: {}
+    required:
+    - column
+    - value
     type: object
   feedback.CreateFeedbackRequest:
     properties:
@@ -413,6 +428,22 @@ definitions:
     - Admin
     - Driver
     - Customer
+  user.UpdateDriverUserProfileRequest:
+    properties:
+      phone:
+        type: string
+    required:
+    - phone
+    type: object
+  user.UpdateUserRequest:
+    properties:
+      column:
+        type: string
+      value: {}
+    required:
+    - column
+    - value
+    type: object
   user.User:
     properties:
       created_at:
@@ -423,6 +454,8 @@ definitions:
         type: string
       id:
         type: string
+      must_change_password:
+        type: boolean
       password:
         type: string
       phone:
@@ -431,6 +464,8 @@ definitions:
         $ref: '#/definitions/user.Role'
       slug:
         description: adminSlug used in public route
+        type: string
+      updated_at:
         type: string
     type: object
 host: 192.168.100.18:8000
@@ -441,6 +476,105 @@ info:
   version: "1.0"
 paths:
   /deliveries/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Permanently deletes a delivery by their ID
+      parameters:
+      - description: Delivery ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Delivery deleted
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Invalid Delivery ID
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - JWT: []
+      summary: Delete a delivery
+      tags:
+      - deliveries
+  /deliveries/{id}/update:
+    put:
+      consumes:
+      - application/json
+      description: Update any delivery struct field of an existing delivery
+      parameters:
+      - description: Delivery ID
+        in: path
+        name: delivery_id
+        required: true
+        type: string
+      - description: Field and value to update
+        in: body
+        name: update
+        required: true
+        schema:
+          $ref: '#/definitions/delivery.UpdateDeliveryRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - JWT: []
+      summary: Update Delivery
+      tags:
+      - deliveries
+  /deliveries/all_deliveries:
+    get:
+      description: Get a list of all deliveries
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/delivery.Delivery'
+            type: array
+      security:
+      - JWT: []
+      summary: List all deliveries
+      tags:
+      - deliveries
+  /deliveries/by-id/{id}:
     get:
       description: Retrieve a delivery by their ID
       parameters:
@@ -467,23 +601,6 @@ paths:
       security:
       - JWT: []
       summary: Get delivery by ID
-      tags:
-      - deliveries
-  /deliveries/all_deliveries:
-    get:
-      description: Get a list of all deliveries
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/delivery.Delivery'
-            type: array
-      security:
-      - JWT: []
-      summary: List all deliveries
       tags:
       - deliveries
   /deliveries/create:
@@ -548,6 +665,38 @@ paths:
       tags:
       - drivers
   /drivers/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Permanently deletes a driver by their ID
+      parameters:
+      - description: Driver ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Driver deleted
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Invalid driver ID
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - JWT: []
+      summary: Delete a driver
+      tags:
+      - drivers
     get:
       description: Retrieve a driver by their ID
       parameters:
@@ -574,6 +723,95 @@ paths:
       security:
       - JWT: []
       summary: Get driver by ID
+      tags:
+      - drivers
+  /drivers/{id}/profile:
+    put:
+      consumes:
+      - application/json
+      description: Updates the vehicle information and current location of a driver
+      parameters:
+      - description: Driver ID
+        in: path
+        name: driver_id
+        required: true
+        type: string
+      - description: Driver profile fields to update
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/driver.UpdateDriverRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - JWT: []
+      summary: Update driver profile
+      tags:
+      - drivers
+  /drivers/{id}/update:
+    put:
+      consumes:
+      - application/json
+      description: Updates a driver's specific field (e.g., VehicleInfo, CurrentLocation)
+        based on driver ID
+      parameters:
+      - description: Driver ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Field and value to update
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/driver.UpdateDriverRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Invalid driver ID or request body
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - JWT: []
+      summary: Update a specific driver field
       tags:
       - drivers
   /drivers/all_drivers:
@@ -974,8 +1212,10 @@ paths:
       tags:
       - notifications
   /orders/{id}:
-    get:
-      description: Fetch a single order using UUID
+    delete:
+      consumes:
+      - application/json
+      description: Permanently deletes an order by their ID
       parameters:
       - description: Order ID
         in: path
@@ -986,23 +1226,25 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Order deleted
           schema:
-            $ref: '#/definitions/order.Order'
+            additionalProperties:
+              type: string
+            type: object
         "400":
-          description: Invalid ID
+          description: Invalid order ID
           schema:
             type: string
-        "404":
-          description: Not found
+        "500":
+          description: Internal server error
           schema:
             type: string
       security:
       - JWT: []
-      summary: Get order by ID
+      summary: Delete a order
       tags:
       - orders
-  /orders/{order_id}:
+  /orders/{id}/update:
     put:
       consumes:
       - application/json
@@ -1097,6 +1339,35 @@ paths:
       security:
       - JWT: []
       summary: Get order by Customer ID
+      tags:
+      - orders
+  /orders/by-id/{id}:
+    get:
+      description: Fetch a single order using UUID
+      parameters:
+      - description: Order ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/order.Order'
+        "400":
+          description: Invalid ID
+          schema:
+            type: string
+        "404":
+          description: Not found
+          schema:
+            type: string
+      security:
+      - JWT: []
+      summary: Get order by ID
       tags:
       - orders
   /orders/create:
@@ -1360,7 +1631,147 @@ paths:
       summary: View public product page
       tags:
       - public
-  /users/{email}:
+  /users/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Permanently deletes a user by their ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User profile deleted
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Invalid user ID
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - JWT: []
+      summary: Delete a user
+      tags:
+      - users
+  /users/{id}/profile:
+    put:
+      consumes:
+      - application/json
+      description: Updates the phone number of a user (commonly used by a driver after
+        initial registration)
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User phone update payload
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/user.UpdateDriverUserProfileRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Profile updated successfully
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: User not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - JWT: []
+      summary: Update user phone number
+      tags:
+      - users
+  /users/{id}/update:
+    put:
+      consumes:
+      - application/json
+      description: Updates a user's specific field (e.g., FullName, Email) based on
+        user ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Field and value to update
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/user.UpdateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Invalid user ID or request body
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - JWT: []
+      summary: Update a specific user field
+      tags:
+      - users
+  /users/all_users:
+    get:
+      description: Get a list of all registered users
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/user.User'
+            type: array
+      security:
+      - JWT: []
+      summary: List all users
+      tags:
+      - users
+  /users/by-email/{email}:
     get:
       description: Retrieve a user by their Email
       parameters:
@@ -1389,7 +1800,7 @@ paths:
       summary: Get user by Email
       tags:
       - users
-  /users/{id}:
+  /users/by-id/{id}:
     get:
       description: Retrieve a user by their ID
       parameters:
@@ -1416,23 +1827,6 @@ paths:
       security:
       - JWT: []
       summary: Get user by ID
-      tags:
-      - users
-  /users/all_users:
-    get:
-      description: Get a list of all registered users
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/user.User'
-            type: array
-      security:
-      - JWT: []
-      summary: List all users
       tags:
       - users
 schemes:
